--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,6 @@
 {
-    "name": "netgen/xrowmetadata"
+    "name": "netgen/xrowmetadata",
+    "require": {
+        "netgen/ngmore-legacy-installer": "*"
+    }
 }
