--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "netgen/xrowmetadata",
+    "type": "netgen-legacy-extension",
     "require": {
         "netgen/ngmore-legacy-installer": "*"
     }
