--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,18 @@
 {
     "name": "netgen/xrowmetadata",
-    "type": "netgen-legacy-extension",
+    "description": "This extension adds a data type which allows setting custom meta data in page head, per content object.",
+    "type": "ezpublish-legacy-extension",
+    "license": "GPL-2.0-only",
+    "authors": [
+        {
+            "name": "xrow GmbH",
+            "homepage": "http://www.xrow.de"
+        }
+    ],
     "require": {
-        "netgen/netgen-legacy-installer": "*"
+        "ezsystems/ezpublish-legacy-installer": "^2.0.4"
+    },
+    "extra": {
+        "ezpublish-legacy-extension-name": "xrowmetadata"
     }
 }
